       * Disabled the sword2 (and thus armor) AMLA for the Captain variation.
       * Enabled the bolas AMLA for all variations.
       * Added the camouflage AMLA back.
 * Editor2:
   * New feature: exporting of selection coordinates to system clipboard
   * Made auto terrain transition mode tri-state: on (editor2's on), partial
     (1.4 editor's on / editor2's off) and off (1.4's off).
 * FormulaAI:
   * Fixed bug #13230: added debug_float FormulaAI function to allow debugging
     via floating popups on the specified hex
   * Added run_file FormulaAI function to allow running .fai scripts directly
     from in-game console
   * Fixed bug #13295: made enemy_units formula return only those units which
     are not incapacitated (for example, it now ignores petrified units )
   * Implemented FR #13348: added timeofday_modifier function to formula AI
   * Added attacks_left attribute to unit callable
   * New variable: my_attacks with all possible attacks 
   * Added a new type of candidate move : strategic
 * Graphics:
   * New type of animation : "recruiting" used by leaders when recruiting
     units
   * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman
     Ogre/Young Ogre, Trapper, Ranger
   * Image path functors:
     * New functor, ~NOP(), which does nothing.
     * The ~RC() image functor does not accept the special palette switch
       ~RC(palette1=palette2) syntax anymore. ~PAL(palette1>palette2) should
       be used instead
 * Language and i18n:
   * new translations: Icelandic
   * updated translations: British English, Catalan, Chinese (Simplified),
      Czech, Dutch, German, Finnish, Hebrew, Hungarian, Indonesian, Italian,
      Lithuanian, Norwegian, Polish, Russian, Serbian, Slovak, Swedish, Turkish
   * Updated CJK character range
   * Fixed word wrapping in CJK languages (patch #1140 from sylecn)
   * Remove female^ descriptions of Outlaw, Footpad, Fugitive, Dark Adept
 * Multiplayer server: